--- a/ShopeeCoinsCalc/Components/Result.razor
+++ b/ShopeeCoinsCalc/Components/Result.razor
@@ -5,12 +5,13 @@
 {
     <!-- 使用 Bootstrap 的標準對話窗標記宣告 -->
 
-    <div class="modal" tabindex="-1" role="dialog" style="display:block; border: 2px solid black">
+    <div class="modal" tabindex="-1" role="dialog" style="display:block; border: 2px solid black" @ref="modalDiv" @onkeydown="HandleKeyDown">
         <div class="modal-dialog" role="document" style="max-width: 80vw">
             <div class="modal-content">
-                <h3>Result</h3>
 
                 <div style="margin: 20px;">
+                    <h3>計算結果:</h3>
+                    <br />
                     <p>含轉盤共 @ViewModel.RetrivedCount 場直播蝦幣</p>
                     <p>總共賺了 @ViewModel.TotalAmount 蝦幣</p>
 
@@ -49,7 +50,7 @@
 
                     <br />
 
-                    <button class="btn-info" @onclick="Close">Close</button>
+                    <button class="btn-secondary" @onclick="Close">Close</button>
                 </div>
             </div>
         </div>
@@ -62,10 +63,22 @@
     [Parameter]
     public ResultViewModel ViewModel { get; set; } = new ResultViewModel();
 
-    protected override void OnInitialized()
-    {
+    private ElementReference modalDiv;
 
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (ShowResult)
+            await modalDiv.FocusAsync();
+
+        await base.OnAfterRenderAsync(firstRender);
     }
+
+    private void HandleKeyDown(KeyboardEventArgs e)
+    {
+        if (e.Key == "Escape") Close();
+    }
+
     private void Close()
     {
         ShowResult = false;
